--- a/app/src/main/res/layout/store_short_description.xml
+++ b/app/src/main/res/layout/store_short_description.xml
@@ -38,8 +38,8 @@
             <!-- layout for text (prices). it contains one TextView, but can contain more than one TextView (in future) -->
             <FrameLayout
                 android:layout_width="0dp"
-                android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight=".5"
                 android:padding="@dimen/standard_padding">
 
@@ -47,24 +47,24 @@
                     android:id="@+id/storeName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/large_text_size"/>
+                    android:textSize="@dimen/large_text_size" />
 
             </FrameLayout>
 
         </LinearLayout>
 
-        <TextView
+        <com.ajdacicjelena.storelocationapp.common.utils.JustifyTextView
             android:id="@+id/short_description_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/standard_padding"
+            android:layout_marginLeft="@dimen/standard_padding"
+            android:layout_marginEnd="@dimen/standard_padding"
+            android:layout_marginRight="@dimen/standard_padding"
+            android:layout_marginBottom="@dimen/standard_padding"
             android:text="@string/txt_store_description"
-            android:textSize="@dimen/small_text_size"
-            android:paddingStart="@dimen/standard_padding"
-            android:paddingLeft="@dimen/standard_padding"
-            android:paddingEnd="@dimen/standard_padding"
-            android:paddingRight="@dimen/standard_padding"
-            android:paddingBottom="@dimen/standard_padding"
-            android:gravity="center"/>
+            android:textAlignment="center"
+            android:textSize="@dimen/small_text_size" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
