--- a/app/src/main/res/layout/store_short_description.xml
+++ b/app/src/main/res/layout/store_short_description.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
+    android:background="@drawable/white_rectangular_selector"
     android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="@dimen/card_no_rounding">
 
     <LinearLayout
@@ -23,6 +25,7 @@
             <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight=".5"
                 android:padding="@dimen/standard_padding">
 
@@ -35,7 +38,6 @@
                     android:contentDescription="@string/txt_image_description" />
             </FrameLayout>
 
-            <!-- layout for text (prices). it contains one TextView, but can contain more than one TextView (in future) -->
             <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -53,17 +55,20 @@
 
         </LinearLayout>
 
-        <com.ajdacicjelena.storelocationapp.common.utils.JustifyTextView
+        <TextView
             android:id="@+id/short_description_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/standard_padding"
-            android:layout_marginLeft="@dimen/standard_padding"
-            android:layout_marginEnd="@dimen/standard_padding"
-            android:layout_marginRight="@dimen/standard_padding"
+            android:layout_gravity="center_horizontal|start"
             android:layout_marginBottom="@dimen/standard_padding"
+            android:layout_marginEnd="@dimen/standard_padding"
+            android:layout_marginLeft="@dimen/standard_padding"
+            android:layout_marginRight="@dimen/standard_padding"
+            android:layout_marginStart="@dimen/standard_padding"
+            android:ellipsize="end"
+            android:lines="5"
             android:text="@string/txt_store_description"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textSize="@dimen/small_text_size" />
 
     </LinearLayout>
