--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,10 +9,12 @@
 
     <TextView
         android:id="@+id/title"
+        android:textSize="@dimen/medium_text_size"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:textAllCaps="true"
         android:ellipsize="end"
         android:gravity="start"
         android:lines="1"
