--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="card_no_rounding">0dp</dimen>
     <dimen name="standard_padding">20dp</dimen>
+    <dimen name="land_standard_padding">10dp</dimen>
 
     <!-- Text sizes. -->
     <dimen name="large_text_size">16sp</dimen>
     <dimen name="medium_text_size">14sp</dimen>
     <dimen name="small_text_size">12sp</dimen>
     <dimen name="extra_small_text_size">10sp</dimen>
+
+    <dimen name="line_margine">6dp</dimen>
+    <dimen name="table_padding">3dp</dimen>
 </resources>
