--- a/app/src/main/res/layout-land/basic_info.xml
+++ b/app/src/main/res/layout-land/basic_info.xml
@@ -8,25 +8,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:orientation="horizontal">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/storeLogoDetail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/small_image_size"
+            android:layout_height="@dimen/small_image_size"
             android:layout_gravity="center_horizontal"
-            android:layout_weight=".15"
             android:adjustViewBounds="true"
+            android:background="@drawable/image_placeholder"
             android:contentDescription="@string/txt_image_description"
             android:scaleType="fitCenter" />
 
         <include
             layout="@layout/table_basic_info"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/land_standard_padding"
-            android:layout_weight=".85" />
+            android:layout_margin="@dimen/land_standard_padding" />
 
     </LinearLayout>
 
